--- a/Problema/css/utilities.css
+++ b/Problema/css/utilities.css
@@ -1,3 +1,14 @@
+.navbar{
+background-color: #34495E;
+border: none;
+}
+.navbar-default .navbar-nav>li>a {
+    color: #8E99A2;
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+    color: white;
+    background-color: #2C3E50;
+}
 section, footer {
     padding: 40px 30px 40px 30px;
 }
@@ -13,16 +24,12 @@ section, footer {
     background-color: #E74C3C;
     text-align: center;
 }
-
 /*footer*/
-
 footer {
     color: #C5CBD1;
     background-color: #34495E;
 }
-
 #footer_reserved  {
-   
     background-color: #2c3e50;
    color: #C5CBD1;
 }
@@ -36,7 +43,6 @@ footer {
     color: #C5CBD1;
     padding: 0px 5px;
 }
-
 .navbar-form {
     padding: 0px;
     position: relative;
@@ -61,7 +67,6 @@ footer {
     background-color: transparent;
     border: none;
     padding: 0px;
-    
 }
 .mg-t {
     margin-top: 37px;
@@ -77,4 +82,22 @@ footer {
 .text_Servics {
     margin-top: 20px;
     color: #C5CBD1;
+}
+.text_Servics p {
+    margin-left: 94px;
+}
+@media screen and (max-width:768px) {
+    footer,section{
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    #suspensivos{
+        width:80%;
+            font-size:12px;
+            overflow:hidden;
+            white-space:nowrap;
+            text-overflow: ellipsis;
+    }
 }
